--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ###########
 # site.url, site.title
 
-title: 'SPA Directed Reading Program'
+title: 'SPA DRP'
 
 ## note:
 #  use site.path in your templates to make it work for both protocols e.g. http and https
